Fix z-index for translation bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,6 +250,7 @@ li i {
     padding: 28px 24px;
     position: fixed;
     right: 0;
+    z-index: 9999;
 }
 
 @media only screen and (min-width: 1200px) {
